Cleaned up code, deleted debug code,  fixed problem with z-index for nav bar and textarea of new tweet

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -7,6 +7,7 @@
   background-color: #00a087;
   color: #e8fdff;
   padding: 0 2em; 
+  z-index: 3;
 }
 #nav-bar .header {
   float: left;
