--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -3,7 +3,8 @@
   padding: 1em;
   margin: 0 2em;
   border: 1px solid #eee;
-  background-color: #eee; 
+  background-color: #eee;
+  z-index: 1; 
 
 }
 .new-tweet h2 {
@@ -19,6 +20,7 @@
   border-radius: 4px;
   border: 1px solid #ddd;
   display: block; 
+  z-index: 1;
 }
 .new-tweet input {
   border-radius: 4px;
